@@ -1,4 +1,5 @@
   - 의류의 활용 현황 SMS 내용 변경 (#28)
+  - clothes2link helper support `class` option
 
 v0.2.0    Thu, 12 May 2016 12:40:31 +0900
   - Add route: GET /clothes/repair
